# MEXC

./: .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README-DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs  telemetry.rs
backend/src/cron/: cleaner.rs  maintenance.rs  mod.rs
backend/src/data/: db.rs  mod.rs  models.rs
backend/src/engine/: calculator.rs  mod.rs  validator.rs
backend/src/network/: mod.rs  pool.rs  rest_client.rs  wss_worker.rs
backend/src/persistence/: mod.rs  sqlite_pool.rs  trade_logger.rs
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LivePulse.tsx  MarketWhitelist.tsx  SystemHealth.tsx  ThemeToggle.tsx  VerifiedExecutions.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.ts
scripts/: install.sh
