[package]
name = "mexc-ghost-hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Async & Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"
futures-util = { version = "0.3", features = ["sink", "stream"] }
futures = "0.3"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Rate Limiter
governor = { version = "0.6", features = ["std", "jitter"] }

# Lock-Free & Performance
arc-swap = "1.7"
dashmap = "6.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite Persistence
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "chrono",
    "macros",
    "migrate"
] }
chrono = { version = "0.4", features = ["serde"] }

# System Telemetry
sysinfo = "0.33"

# Web Server + SSE + Static Files
axum = { version = "0.7", features = ["ws", "tokio"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
url = "2.5"
base64 = "0.22"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
